--- a/misc/1510-perf-study/twcs-perf-measures.html
+++ b/misc/1510-perf-study/twcs-perf-measures.html
@@ -5998,7 +5998,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20151002175451062" modified="20151003125357602" title="GettingStarted">
+<div created="20151002175451062" modified="20151003150334707" title="GettingStarted">
 <pre>In this wiki I will try to report about various aspects of TW performance, using the [[CommunitySearch|http://erwanm.github.io/tw-community-search/]] wiki. This is carried out in the perspective of issue https://github.com/erwanm/tw-community-search/issues/9.
 
 Measures were done on October the 2nd, on the full ~CommunitySearch wiki which includes:
@@ -6009,7 +6009,8 @@ Measures were done on October the 2nd, on the full ~CommunitySearch wiki which i
 *    120 plugins
 *    from 21 wiki authors
 
-The exact wiki used in these experiments can be found on Github: https://github.com/erwanm/tw-community-search/tree/067adf510d6563ece1500ad20c49c47024540385
+The wikis and data used in these experiments can be found on Github: 
+https://github.com/erwanm/tw-community-search/tree/master/misc/1510-perf-study
 
 * [[Setup]]
 * [[Results]]
